--- a/Orderly.Client/Pages/Shared/DashboardLayout.razor
+++ b/Orderly.Client/Pages/Shared/DashboardLayout.razor
@@ -105,7 +105,7 @@
             Body
         *@
 
-        <div class="p-6">
+        <div class="p-3 sm:p-4">
             @Body
         </div>
     </main>
@@ -143,7 +143,8 @@
     private string GetNavLinkClasses(string path)
     {
         bool isActive = IsLinkActive(path);
-        return $"flex items-center gap-2 px-4 py-2 rounded-md relative font-medium text-[1.05rem] transition-all duration-200 " +
+
+        return $"flex items-center gap-2 px-4 pt-1 pb-2 rounded-md relative font-medium text-[1.05rem] transition-all duration-200 " +
                $"{(isActive ? "bg-[var(--primary)] text-[var(--fg)]" : "text-lightfg dark:text-darkfg")} " +
                $"hover:text-[var(--primary)]";
     }
@@ -157,7 +158,7 @@
     {
         get
         {
-            return $"flex-1 transition-all duration-300 {(IsDesktop ? "ml-64" : "")} p-6 lg:p-12 bg-lightbg dark:bg-darkbg";
+            return $"flex-1 transition-all duration-300 {(IsDesktop ? "ml-64" : "")} p-3 sm:p-4 lg:p-8 bg-lightbg dark:bg-darkbg";
         }
     }
 
