--- a/Orderly.Client/wwwroot/css/site.css
+++ b/Orderly.Client/wwwroot/css/site.css
@@ -3,6 +3,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html, body {
+    font-family: 'Inter', ui-sans-serif, system-ui !important;
+}
+
 @layer utilities {
     .fade-in {
         opacity: 0;
